// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DelegateModal matches snapshot when open 1`] = `
<div
  className="fixed inset-0 bg-black/40 flex items-center justify-center z-50"
>
  <div
    className="bg-white rounded-2xl p-6 w-full max-w-md shadow-xl"
  >
    <h2
      className="text-lg font-bold text-gray-900 mb-1"
    >
      Delegate Voting Power
    </h2>
    <p
      className="text-sm text-gray-500 mb-4"
    >
      Delegate to yourself to activate your voting power, or choose another address.
    </p>
    <form
      className="space-y-4"
      onSubmit={[Function]}
    >
      <div
        className="flex items-center justify-between gap-3"
      >
        <span
          className="text-xs text-gray-500 font-mono"
        >
          Not connected
        </span>
        <button
          className="text-xs px-3 py-1.5 rounded-lg border border-gray-200 text-gray-700 hover:bg-gray-50 disabled:opacity-50"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          Delegate to myself
        </button>
      </div>
      <input
        className="w-full border border-gray-300 rounded-lg px-3 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-indigo-500 font-mono"
        onChange={[Function]}
        placeholder="Stellar address (G...)"
        required={true}
        type="text"
        value=""
      />
      <div
        className="flex gap-3"
      >
        <button
          className="flex-1 border border-gray-200 text-gray-600 py-2 rounded-lg text-sm hover:bg-gray-50"
          onClick={[MockFunction]}
          type="button"
        >
          Cancel
        </button>
        <button
          className="flex-1 bg-indigo-600 text-white py-2 rounded-lg text-sm font-medium hover:bg-indigo-700 disabled:opacity-50"
          disabled={false}
          type="submit"
        >
          Delegate
        </button>
      </div>
      <div
        className="border-t border-gray-200 pt-4 mt-4"
      >
        <p
          className="text-xs text-gray-500 mb-2"
        >
          Or delegate without paying gas
        </p>
        <button
          className="w-full bg-green-600 text-white py-2 rounded-lg text-sm font-medium hover:bg-green-700 disabled:opacity-50"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          Delegate without paying gas
        </button>
        <p
          className="text-xs text-gray-400 mt-1"
        >
          Sign off-chain, relayer submits transaction
        </p>
      </div>
    </form>
  </div>
</div>
`;

exports[`DelegateModal matches snapshot when open with prefill address 1`] = `
<div
  className="fixed inset-0 bg-black/40 flex items-center justify-center z-50"
>
  <div
    className="bg-white rounded-2xl p-6 w-full max-w-md shadow-xl"
  >
    <h2
      className="text-lg font-bold text-gray-900 mb-1"
    >
      Delegate Voting Power
    </h2>
    <p
      className="text-sm text-gray-500 mb-4"
    >
      Delegate to yourself to activate your voting power, or choose another address.
    </p>
    <form
      className="space-y-4"
      onSubmit={[Function]}
    >
      <div
        className="flex items-center justify-between gap-3"
      >
        <span
          className="text-xs text-gray-500 font-mono"
        >
          Not connected
        </span>
        <button
          className="text-xs px-3 py-1.5 rounded-lg border border-gray-200 text-gray-700 hover:bg-gray-50 disabled:opacity-50"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          Delegate to myself
        </button>
      </div>
      <input
        className="w-full border border-gray-300 rounded-lg px-3 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-indigo-500 font-mono"
        onChange={[Function]}
        placeholder="Stellar address (G...)"
        required={true}
        type="text"
        value="GBFUUXATVOGXGD4KS3I423QFZSPE4ZFOQ3TCJVWFUYSIPULXIRVRE2DT"
      />
      <div
        className="flex gap-3"
      >
        <button
          className="flex-1 border border-gray-200 text-gray-600 py-2 rounded-lg text-sm hover:bg-gray-50"
          onClick={[MockFunction]}
          type="button"
        >
          Cancel
        </button>
        <button
          className="flex-1 bg-indigo-600 text-white py-2 rounded-lg text-sm font-medium hover:bg-indigo-700 disabled:opacity-50"
          disabled={false}
          type="submit"
        >
          Delegate
        </button>
      </div>
      <div
        className="border-t border-gray-200 pt-4 mt-4"
      >
        <p
          className="text-xs text-gray-500 mb-2"
        >
          Or delegate without paying gas
        </p>
        <button
          className="w-full bg-green-600 text-white py-2 rounded-lg text-sm font-medium hover:bg-green-700 disabled:opacity-50"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Delegate without paying gas
        </button>
        <p
          className="text-xs text-gray-400 mt-1"
        >
          Sign off-chain, relayer submits transaction
        </p>
      </div>
    </form>
  </div>
</div>
`;
